src/css/styles.css
*:not(h1):not(h2) {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1.1rem;
}

.video-container {
  align-self: center;
  color: whitesmoke;
  display: flex;
  flex-direction: column;
  width: 50%;
  gap: 5rem;
  padding: 0 3rem 5rem 3rem;
  line-height: 1.5;
}
.video-container > * {
  width: 100%;
}
.video-container video {
  box-shadow: -2px 2px 4px black;
  border-radius: 10px;
}

.page-text {
  padding: 3rem 2rem;
  border-radius: 10px;
  background-color: rgba(0, 0, 0, 0.549);
  line-height: 1.5;
  color: whitesmoke;
  text-shadow: -2px 2px 10px black;
  text-align: start;
  width: 100%;
}

.page-texts-container {
  display: flex;
  flex-direction: column;
  gap: 5rem;
  padding: 0 3rem 5rem 3rem;
  align-self: center;
}

.app-container {
  background-image: url("/assets/home-page-landscape.webp");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  min-height: 100vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 5rem;
  justify-content: space-between;
}

h1 {
  font-weight: bold;
}

@media (max-width: 1024px) {
  .page-text {
    line-height: 1.6;
    padding: 2rem 1rem;
  }
  .app-container {
    background-image: url("/assets/home-page-portrait.webp");
  }
}
@media (max-width: 1000px) {
  .video-container {
    width: 90%;
  }
}
@media (max-width: 425px) {
  .video-container {
    width: 100%;
  }
}
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 2rem 3rem;
  color: black;
  background-color: rgba(255, 255, 255, 0.653);
  box-shadow: -2px 2px 4px rgb(76, 76, 76);
  gap: 2rem;
  flex-wrap: wrap;
  position: sticky;
  top: 0;
}
.header .museum-logo {
  cursor: pointer;
}
.header .links {
  display: flex;
  justify-content: space-between;
  gap: 2rem;
  flex-wrap: wrap;
}
.header .links > * {
  text-decoration: none;
  color: black;
}

@media (max-width: 660px) {
  .header {
    justify-content: center;
    text-align: center;
  }
  .header .links {
    justify-content: center;
  }
}
.footer {
  background-color: rgba(128, 128, 128, 0.706);
  color: whitesmoke;
  text-align: center;
  padding: 1rem;
  box-shadow: 2px -2px 4px rgb(76, 76, 76);
}

@media (max-width: 420px) {
  .footer {
    text-align: center;
  }
}
.contacts-container {
  background-image: url("/assets/contacts-page-landscape.webp");
}

@media (max-width: 1024px) {
  .contacts-container {
    background-image: url("/assets/contacts-page-portrait.webp");
  }
}
.about-container {
  background-image: url("/assets/about-page-landscape.webp");
}

@media (max-width: 1024px) {
  .about-container {
    background-image: url("/assets/about-page-portrait.webp");
  }
}
.shadow-museum {
  box-shadow: -10px 10px 20px rgb(0, 0, 0) !important;
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
  filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.8));
  width: 3rem; /* Makes the icon slightly larger */
  height: 3rem;
}

#museumCarousel {
  width: 80% !important;
}

@media (max-width: 768px) {
  #museumCarousel {
    width: 100% !important;
  }
}

/*# sourceMappingURL=styles.css.map */

